# exhaustive-rs

./: Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs  tokens.rs
test-compile/: Cargo.toml
test-compile/src/: lib.rs
test-compile/src/tests/: 01-empty-iter.stderr  02-once-iter.rs
tests/: compile-test.rs  tests.rs
tests/compile/: 01-empty-iter.rs  01-empty-iter.stderr  02-once-iter.rs  02-once-iter.stderr  03-for-loop.rs  05-for-iter.rs  06-expr-if.rs  07-expr-if.rs  08-multiple-for-loops.rs
