[package]
name = "exhaustive"
version = "0.0.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# [[test]]
# name = "tests"
# path = "tests/progress.rs"

# [dev-dependencies]
# trybuild = { version = "1.0", features = ["diff"] }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = { version = "1.0.36", features = ["full"] }