[package]
name = "exhaustive"
version = "0.0.1"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing","extra-traits"] }

[dev-dependencies]
trybuild = "1.0"